refactor: change generated html saving folder